2005-11-09  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/cp-tools/cp-tools.wml: Add gjdoc download link.

2005-11-09  Chris Burdess  <dog@gnu.org>

	* gnu/xml/aelfred2/SAXDriver.java: Ensure that absolutize does not
	throw exception when custom entity resolver is set.

2005-11-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/awt/event/InvocationEvent.java:
	(exception): Replaced this field (removed yesterday) because it is 
	needed for serialization.
	(dispatch): Save thrown exception.
	(getException): Directly return exception, no need to cast throwable.

2005-11-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/ComponentInputMap.java:
	(put): Notify the component.
	(clear): Likewise.
	(remove): Likewise.
	(setParent): Notify the parent.  Improved the exception messages.
	* javax/swing/JComponent.java:
	(inputMap_whenInFocusedWindow): Changed type from InputMap to 
	ComponentInputMap.
	(setInputMap): If we're setting the WHEN_IN_FOCUSED_WINDOW map and 
	the parameter is not a ComponentInputMap or is not associated with 
	the same Component, throw an IllegalArgumentException.
	(getInputMap): Create a new ComponentInputMap instead of a new 
	InputMap when the WHEN_IN_FOCUSED_WINDOW map doesn't yet exist.
	(udpateComponentInputMap): New method.  This is the method that 
	ComponentInputMap calls when it is updated.  Not yet completely 
	implemented.

2005-11-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/PortableInterceptor/ObjectReferenceTemplateSeqHelper.java,
	org/omg/PortableInterceptor/ObjectReferenceTemplateSeqHolder.java:
	New files.

2005-11-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/PortableInterceptor/ObjectReferenceTemplate.java,
	org/omg/PortableInterceptor/ObjectReferenceTemplateHelper.java,
	org/omg/PortableInterceptor/ObjectReferenceTemplateHolder.java:
	New files.

2005-11-09  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTabbedPane.java