@@ -1,3 +1,10 @@
+2005-11-09  Lillian Angel  <langel@redhat.com>
+
+	* javax/swing/JTabbedPane.java
+	(setComponent): No need to remove and add tab.
+	(remove): Fixed API documentation.
+	(remove): Fixed API documentation. Re-implemented according to API.
+
 2005-11-09  Mark Wielaard  <mark@klomp.org>
 
 	* doc/www.gnu.org/cp-tools/cp-tools.wml: Add gjdoc download link.
